[FIX] Fix horizontal scroll in custom form views

--- a/pyper_partner_manager/static/src/scss/style.scss
+++ b/pyper_partner_manager/static/src/scss/style.scss
@@ -66,10 +66,8 @@
         }
     }
 
-    .o_notebook {
-        .tab-pane {
-            padding: 0 !important;
-        }
+    .o_group.row {
+        margin-left: 0;
+        margin-right: 0;
     }
-
 }
