--- a/pyper_product_catalog/static/src/scss/style.scss
+++ b/pyper_product_catalog/static/src/scss/style.scss
@@ -1,4 +1,4 @@
-.o_sale_order {
+.o_product {
     .o_form_sheet {
         padding: 0;
 
@@ -60,10 +60,8 @@
         }
     }
 
-    .o_notebook {
-        .tab-pane {
-            padding: 0 !important;
-        }
+    .o_group.row {
+        margin-left: 0;
+        margin-right: 0;
     }
-
 }
