--- a/pyper_sale_manager/static/src/scss/style.scss
+++ b/pyper_sale_manager/static/src/scss/style.scss
@@ -42,10 +42,8 @@
         }
     }
 
-    .o_notebook {
-        .tab-pane {
-            padding: 0 !important;
-        }
+    .o_group.row {
+        margin-left: 0;
+        margin-right: 0;
     }
-
 }
